[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/TireTracks.png" type="Texture" id=1]
[ext_resource path="res://entities/Drone.gd" type="Script" id=2]
[ext_resource path="res://entities/guns/PlayerGun.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/bullets/TrackerBullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/bullets/KillerBullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/Drone.png" type="Texture" id=6]
[ext_resource path="res://assets/TireTracks.tres" type="Material" id=7]
[ext_resource path="res://entities/HealthManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/TrackerGun.png" type="Texture" id=9]
[ext_resource path="res://sprites/KillerGun.png" type="Texture" id=10]

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Roll"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 8.0

[node name="Drone" type="KinematicBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/Roll = SubResource( 5 )

[node name="HealthManager" parent="." instance=ExtResource( 8 )]
position = Vector2( 0, -10 )

[node name="RightParticles" type="Particles2D" parent="."]
position = Vector2( 0, 5 )
amount = 25
local_coords = false
process_material = ExtResource( 7 )
texture = ExtResource( 1 )

[node name="LeftParticles" type="Particles2D" parent="."]
position = Vector2( 0, -5 )
amount = 25
local_coords = false
process_material = ExtResource( 7 )
texture = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera" type="Camera2D" parent="."]
rotation = 1.5708
current = true
smoothing_enabled = true
smoothing_speed = 20.0

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="Collider" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )
hframes = 2
vframes = 2
frame = 2

[node name="TrackerGun" parent="." instance=ExtResource( 3 )]
position = Vector2( -2, -3 )
bullet_scene = ExtResource( 4 )

[node name="Sprite" parent="TrackerGun" index="1"]
texture = ExtResource( 9 )

[node name="KillerGun" parent="." instance=ExtResource( 3 )]
position = Vector2( -2, 3 )
bullet_scene = ExtResource( 5 )

[node name="Sprite" parent="KillerGun" index="1"]
texture = ExtResource( 10 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]

[editable path="TrackerGun"]
[editable path="KillerGun"]
